# iris-docs2

./: .buildinfo  .readthedocs.yaml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  README.md  api.html  architecture.html  build.sh  genindex.html  index.html  installation.html  misc.html  objects.inv  search.html  searchindex.js  started.html
.github/workflows/: ci.yml  ctest.yml  docker.yml  docs.yml  nightly.yml
docs/: README.md  conf.py  index.rst
docs/doxygen/: Doxyfile  Doxyfile.in
docs/readthedocs/: environment.yml
docs/readthedocs/source/: api.rst  architecture.rst  conf.py  index.rst  installation.rst  started.rst
docs/sphinx/: environment.yml
docs/sphinx/source/: architecture.rst  conf.py  index.rst  installation.rst  misc.rst  started.rst
docs/sphinx/source/_code/: kernel.omp.h
include/iris/: CMakeLists.txt  iris_errno.h  iris_runtime.h
src/: CMakeLists.txt
src/rt/: CAPI.cpp  CMakeLists.txt  Command.cpp  Command.h  Config.h.in  Debug.h  Device.cpp  Device.h  Kernel.cpp  Kernel.h  Mem.cpp  Mem.h  Platform.cpp  Platform.h  Queue.h  QueueReady.cpp  QueueReady.h  QueueTask.cpp  QueueTask.h  Releasable.cpp  Releasable.h  Scheduler.cpp  Scheduler.h  Structs.h  Task.cpp  Task.h  Thread.cpp  Thread.h  Timer.cpp  Utils.cpp  Utils.h  Worker.cpp  Worker.h
tests/: CMakeLists.txt  Makefile.tests
tests/00_common/: iris_assert.h  iris_test.h
tests/01_init_finalize/: CMakeLists.txt  test01_init_finalize.c
tests/02_platform_info/: CMakeLists.txt  Makefile  test02_platform_info.c
tests/02_task_depend/: CMakeLists.txt  test02_task_depend.c
tests/03_device_info/: CMakeLists.txt  Makefile  test03_device_info.c
tests/04_environment/: CMakeLists.txt  Makefile  test04_environment.c
tests/04_task_create/: CMakeLists.txt  Makefile  test04_task_create.c
tests/05_task_create/: CMakeLists.txt  Makefile  test05_task_create.c
